# bedrock-dslx

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  requirements_3_12.in  requirements_lock_3_12.txt
lib/ecc/: BUILD.bazel  secded_decoder.x  secded_encoder.x  secded_test.x
lib/ecc/dslx_codegen/: BUILD.bazel  secded_decoder.x.jinja2  secded_encoder.x.jinja2
