# Copyright 2025 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
This module defines the Bazel Module (bzlmod) configuration for the Bedrock-DSLX project.
"""

module(
    name = "bedrock-dslx",
    version = "0.0.1",
)

bazel_dep(name = "rules_xlsynth", version = "0.0.0")  # placeholder version
git_override(
    module_name = "rules_xlsynth",
    # Updated 2025-08-06
    commit = "3256814a0a708074ca7184399e3d609ad7f49ff4",
    remote = "https://github.com/xlsynth/rules_xlsynth",
)
