# Copyright 2025 The Bedrock-DSLX Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_xlsynth//:rules.bzl", "dslx_library", "dslx_test")

package(default_visibility = ["//visibility:public"])

dslx_library(
    name = "secded_encoder",
    srcs = ["secded_encoder.x"],
)

dslx_library(
    name = "secded_decoder",
    srcs = ["secded_decoder.x"],
)

dslx_library(
    name = "secded_test",
    srcs = ["secded_test.x"],
    deps = [
        "//lib/ecc:secded_decoder",
        "//lib/ecc:secded_encoder",
    ],
)

# TODO(mgottscho): after https://github.com/xlsynth/rules_xlsynth/pull/39 merges, fold the dslx_library into this dslx_test
dslx_test(
    name = "run_secded_test",
    deps = [":secded_test"],
)
